Drag bugs (#348)
* consolidate clusters

* backup

* backup

* backup

* backup

* backup

* backup

* counter zoom links

* fix multicluster title

* clone bug

* fix test

* add counter zoom method

* fix layout box

* backup

* backup

* backup

* fix diagram centering

* consolidate hosts

* backup

* extend range

* consolidate groups by cluster/clone type

* add scrollbar

* disable zoomin at 1

* remove inline notification

* straighten out design topology diagrams

* fix tests

* fix design loading bug

* backup

* backup

* build latency into response from weave

* tweak link transition

* fix detail view position

* base drag on transform of section

* backup

* shape highlight

* node hilight finish

* consolidate smaller groups

* change host to blue--red means bad to devops

* fix lint and tests

--- a/scss/topology-node.scss
+++ b/scss/topology-node.scss
@@ -11,6 +11,12 @@
  $linkColor: rgb(140,155,165);
 
 .node {
+  .shape {
+    stroke-width: 3px;
+    stroke-opacity: 1;
+    fill: $color__gray-3;
+  }
+
   text {
       text-anchor: middle;
       font-size: .75rem;
@@ -24,31 +30,19 @@
       pointer-events: none;
   }
 
-  &:hover {
-      use:nth-child(1) {
-        stroke-opacity: 0.2;
-      }
-  }
-
-  &:focus, &:focus-within {
-      * {
-          outline: none;
-      }
-      use:nth-child(1) {
-        stroke-opacity: 0.2;
-      }
-  }
-
   .shadow {
-    stroke-width: 20px;
+    stroke-width: 3px;
     stroke-opacity: 0;
-    stroke-linejoin: round;
+    stroke: blue;
+    fill: none;
   }
 
-  .main {
-    stroke-width: 3px;
+  &:hover .shadow {
+    stroke-opacity: 0.4;
+  }
+
+  &.selected .shadow {
     stroke-opacity: 1;
-    fill: $color__gray-3;
   }
 
   .centralCircle {
@@ -58,18 +52,12 @@
     pointer-events: none;
   }
 
-  .loop {
-    stroke-width: 1px;
-    stroke: $linkColor;
-    opacity: 0.5;
-    fill: none;
-    pointer-events: none;
+  &:focus, &:focus-within {
+    * {
+        outline: none;
+    }
   }
 
-  .directionDecorator {
-    stroke: $linkColor;
-    fill: $linkColor;
-  }
 }
 
 .container {
@@ -88,9 +76,9 @@
   border-top: 6px solid $color__purple-60;
 }
 .host {
-  stroke: $color__red-30;
-  fill: $color__red-30;
-  border-top: 6px solid $color__red-30;
+  stroke: $color__blue-50;
+  fill: $color__blue-50;
+  border-top: 6px solid $color__blue-50;
 }
 .internet {
   stroke: $color__blue-40;
